# wasm-micro-runtime

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASE_NOTES.md
.devcontainer/: Dockerfile  Dockerfile-SGX  devcontainer.json  finalize.sh  requirements.txt
.devcontainer/local/: .gitignore  Dockerfile_local  devcontainer.json  finalize.sh  prepare_devcontainer_base.sh
.github/: dependabot.yml
.github/actions/install-wasi-sdk-wabt/: action.yml
.github/actions/run-samples/: action.yml
.github/actions/run-spec-tests/: action.yml
.github/actions/run-unit-tests/: action.yml
.github/actions/run-wamr-compiler-tests/: action.yml
.github/actions/run-wasi-tests/: action.yml
.github/actions/setup-zephyr/: action.yml
.github/codeql/: codeql-config.yml
.github/scripts/: codeql_buildscript.sh
.github/workflows/: build_docker_images.yml  build_iwasm_release.yml  build_llvm_libraries.yml  build_wamr_lldb.yml  build_wamr_sdk.yml  build_wamr_vscode_ext.yml  build_wamr_wasi_extensions.yml  build_wamrc.yml  check_version_h.yml  codeing_guildelines.yml  codeql.yml  coding_guidelines.yml  compilation_on_android_ubuntu.yml  compilation_on_android_ubuntu_macos.yml  compilation_on_macos.yml  compilation_on_nuttx.yml  compilation_on_sgx.yml  compilation_on_windows.yml  compilation_on_zephyr.yml  create_tag.yml  hadolint_dockerfiles.yml  linux.yml  mac.yml  nightly_run.yml  release_process.yml  reuse_latest_release_binaries.yml  run_samples.yml  run_spec_test.yml  run_tests.yml  run_unit_test.yml  run_wamr_compiler_test.yml  run_wasi_test.yml  spec_test.yml  spec_test_on_nuttx.yml  supply_chain.yml  test_all_in_one.yml  wamr_wasi_extensions.yml
.superpowers/prompts/: task-2-pr-review-prompt.md  task-3-add-tests-prompt.md
.superpowers/specs/: phase1-completion-checklist.md
.superpowers/validation/: phase1-test-results.md
build-scripts/: config_common.cmake  gcc_toolchain.cmake  runtime_lib.cmake
ci/: build_gtags_index.sh  build_runtime_comprehensive.py  build_runtime_in_every_way.sh  build_tags_index.sh  coding_guidelines_check.py  compare_symbols.py  coverity_intel_bac.sh  prepare_build_for_coverity_scan.sh  prepare_build_for_coverity_scan_intel_bac.sh
core/: config.h
core/app-framework/: app_ext_lib_export.c  app_framework.cmake
core/app-mgr/: module.json
core/app-mgr/app-manager/: app_manager.c  app_manager.h  app_manager_host.c  app_manager_host.h  app_mgr.cmake  ble_msg.c  event.c  event.h  message.c  module_config.h  module_jeff.c  module_jeff.h  module_utils.c  module_wasm_app.c  module_wasm_app.h  module_wasm_lib.c  module_wasm_lib.h  resource_reg.c  watchdog.c  watchdog.h
core/app-mgr/app-mgr-shared/: app-manager-export.h  app_manager_export.h  app_mgr_shared.cmake  host_link.h
core/app-mgr/app_manager/: CMakeLists.txt  app-manager-host.c  ble_msg.c  (+18 more)
core/app-mgr/host_agent/: Android.mk  CMakeLists.txt  module.json
core/app-mgr/host_agent/host_api_c/src/: attr-container.c  basic_types.h  bh_definition.c  bh_definition.h  host_api.c  host_api.h  host_api_export.h  imrt_link_message.c  imrt_link_message.h  makefile  transaction_manager.c  transaction_manager.h
core/app-mgr/host_agent/lib/: agent_core_lib.h  host_agent_lib.cmake  iagent_bsp.h  transaction.c  transaction.h
core/app-mgr/host_agent/lib/linux/: iagent_bsp_linux.h  sync_bsp.c
core/app-mgr/host_agent/src/: host-agent-aee.c  host-agent-aee.h  host-agent-callback.c  host-agent-callback.h  host-agent-client.c  host-agent-client.h  host-agent-imrt-link.c  host-agent-imrt-link.h  host-agent-log.c  host-agent-log.h  host-agent-utils.c  host-agent-utils.h  host-agent.c  host-agent.h
core/shared-lib/: shared_lib.cmake
doc/: all_features_list.md  architecture-overview.md  architecture_overview.md  build_wamr.md  building-refactor-notes.md  building.md  building_refactor_notes.md  code-quality.md  code_quality.md  code_review.md  debugging.md  dev-in-container.md  dev_in_container.md  documentation-principles.md  documentation_principles.md  embed_wamr.md  export_native_api.md  linting.md  memory_tune.md  perf_tune.md  port_wamr.md  pthread_library.md  testing.md  wamr_api.md
docs/audits/: 2026-05-08-baseline-audit.md  2026-05-10-phase2-audit.md  2026-05-13-phase3-audit.md  2026-05-15-final-audit.md
projects/: README.md
projects/littlevgl/: CMakeLists.txt  README.txt  build.sh  module.json  user_guide.md
projects/simple/: CMakeLists.txt  README.md  build.sh
samples/basic/: build.sh
samples/c-api/: README.md
samples/inst-context/: CMakeLists.txt  build.sh
samples/inst-context-threads/: build.sh
samples/littlevgl/: README.md  build.sh  user_guide.md
samples/littlevgl-native/: README.md  build.sh
samples/littlevgl/vgl-native-ui-app/: CMakeLists.txt  CMakeLists.txt.in  main.c
samples/littlevgl/vgl-native-ui-app/lv-drivers/: display_indev.h  linux_display_indev.c  system_header.h
samples/littlevgl/vgl-native-ui-app/lv_drivers/indev/: mouse.c
samples/native-stack-overflow/: build.sh
samples/shared-module/: build.sh
samples/simple/: CMakeLists.txt  README.md  build.sh  user_guide.md
samples/terminate/: build.sh
samples/wasm-c-api/: CMakeLists.txt  README.md
samples/workload/: README.md  preparation.sh
scripts/: in-container.sh
test-tools/host-tool/: CMakeLists.txt
test-tools/toolchain/: generate_toolchain.py  wamr_toolchain.cmake
tests/end2end/: CMakeLists.txt  README.md  TEST-MATRIX.md
tests/end2end/aot-gc-compatibility/: CMakeLists.txt  README.md  run-test.sh
tests/end2end/aot-gc-compatibility/test-cases/: simple-no-table.wat  simple-with-table.wat
tests/end2end/common/: test-helpers.sh
tests/end2end/gc-ref-null/: CMakeLists.txt  README.md  run-test.sh
tests/end2end/gc-ref-null/test-cases/: gc-abstract-type.wat  gc-out-of-range.wat  gc-type-index.wat  non-gc-externref.wat  non-gc-funcref.wat  non-gc-invalid.wat
tests/regression/: README.md
tests/unit/: CMakeLists.txt  README.md
tests/wamr-test-suites/: README.md  test_wamr.sh
wamr-compiler/: CMakeLists.txt  main.c
(+539 files in other folders)
